# NotaMage-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  side.py
my_agent/: __init__.py  graph.py  state.py
my_agent/nodes/: __init__.py  agent.py
my_agent/prompts/: __init__.py  system.py
my_agent/tools/: __init__.py  categories.py  notes.py
my_agent/utils/: __init__.py  express_client.py
